--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <button>分享</button>
             <button>打印</button>
             <button>换肤</button>
-            <button>登出</button>
+            <button v-on:click="logout">登出</button>
         </div>
         
         <div class="resume">
@@ -94,7 +94,7 @@
         </div>
         <div class="login" v-show="loginVisible" v-on:submit.prevent="onLogin">
             <form action="">
-                <button v-on:click="loginVisible=false">关闭</button>
+                <button type="button" v-on:click="loginVisible=false">关闭</button>
                 <h2>登录</h2>
                 <div class="row">
                     <label>邮箱</label>
@@ -110,7 +110,7 @@
         </div>
         <div class="register" v-show="registerVisible" v-on:submit.prevent="onRegister">
             <form action="">
-                <button v-on:click="registerVisible=false">关闭</button>
+                <button type="button" v-on:click="registerVisible=false">关闭</button>
                 <h2>注册</h2>
                 <div class="row">
                     <label>邮箱</label>
